# Aho_Hyperscan

./: CMakeLists.txt  README.md
benchmark/: benchmarks.h
include/: Aho.h  Hyperscan.h  LinearSearch.h  PatternSearch.h  TrieSearch.h
source/: main.cpp
test/: StringAlgosTest.cpp
